basic server finished + client basic dev config

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "serv": "nodemon server/server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run serv\" \"npm run client\""
   },
   "repository": {
     "type": "git",
