--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.4",
+    "react-async-component": "^2.0.0",
     "react-dom": "^16.8.4",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^6.0.1",
