--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:3002"
+  "proxy": "http://localhost:3002",
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  }
 }
