--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "node server/server.js",
     "serv": "nodemon server/server.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run serv\" \"npm run client\""
+    "dev": "concurrently \"npm run serv\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
