--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "formik": "^1.5.1",
     "jsonwebtoken": "^8.5.0",
     "moment-js": "^1.1.15",
     "mongoose": "^5.4.19",
-    "cookie-parser": "^1.4.4"
+    "react": "^16.8.6",
+    "yup": "^0.27.0"
   },
   "devDependencies": {},
   "scripts": {
