--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "file-type": "^10.9.0",
     "formik": "^1.5.1",
+    "jimp": "^0.6.1",
     "jsonwebtoken": "^8.5.0",
     "moment-js": "^1.1.15",
     "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
     "react": "^16.8.6",
     "yup": "^0.27.0"
   },
