--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "react": "^16.8.6",
+    "react-image": "^2.1.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {},
